--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<html>
+    <body>
+        <a href="https://yorodoes.github.io/BlindyTesty">Blind test website using spotify.</a>
+    </body>
+</html>
