removed the old BlindyTesty submodule

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <a href="https://yorodoes.github.io/BlindyTesty/blindytesty/build/web">Blind test website using spotify.</a>
+        <a href="https://yorodoes.github.io/BlindyTesty">Blind test website using spotify.</a>
     </body>
 </html>
